sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: ')' expected but '<-' found.
while(i <- 0 to getNombreValeurs() :Int) 
        ^AlgBubbleSort1:7: error: illegal start of simple expression
while(i <- 0 to getNombreValeurs() :Int) 
                                   ^