sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {


var i : Int = 0

while(i <- 0 to getNombreValeurs() :Int) 
if(getValeurs(i int) < getValeurs(i+1))
echange(getValeurs(i),  getValeurs(i+1))


}
